fix bug: create new window close all, sometimes;new: unlock without enter

--- a/_locales/am/messages.json
+++ b/_locales/am/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "ክፍት ምንጭ"
+    },
+    "notif_first": {
+        "message": "<i>እንደ ገና:<br>1. ይህ እባብ እንደ ወርዓት በይነት አድርጉ። <br>2. እባኮትን የአይነት ቀስት ምስል ስርዓት ከወንጌላው ይቀርበት፣ ምንም አይሆንም ይህ ይወጣው ይሞቃ ወይም ይሞቃ።</i>"
     }
 }
