--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "مصدر مفتوح"
+    },
+    "notif_first": {
+        "message": "<i>تحذير:<br>1. لن تعمل هذه الإضافة إلا بعد تعيين كلمة مرور. <br>2. يرجى التأكد من عدم تثبيت إضافات مشابهة قبل تعيين كلمة المرور، حيث قد يتسبب ذلك في عدم عمل المتصفح بشكل صحيح.</i>"
     }
 }
