--- a/_locales/he/messages.json
+++ b/_locales/he/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "קוד פתוח"
+    },
+    "notif_first": {
+        "message": "<i>אזהרה:<br>1. הרחבה זו תהיה פעילה רק לאחר הגדרת סיסמה. <br>2. אנא ודאו שאין הרחבות דומות מותקנות לפני הגדרת הסיסמה, שכן זה עלול לגרום לתקלות בדפדפן.</i>"
     }
 }
