--- a/_locales/mr/messages.json
+++ b/_locales/mr/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "ओपन स्रोतनिर्मित"
+    },
+    "notif_first": {
+        "message": "<i>चेतावणी:<br>1. हा विस्तार फक्त पासवर्ड सेट केल्यानंतर कार्यरत असेल. <br>2. कृपया पासवर्ड सेट करण्यापूर्वी कोणतेही समान विस्तार स्थापित केलेले नाही याची खात्री करा, कारण यामुळे ब्राउझरच्या कार्यक्षमतेवर परिणाम होऊ शकतो.</i>"
     }
 }
