--- a/_locales/ms/messages.json
+++ b/_locales/ms/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "Kod Sumber Terbuka"
+    },
+    "notif_first": {
+        "message": "<i>Amaran:<br>1. Sambungan ini hanya akan berfungsi setelah kata laluan ditetapkan. <br>2. Sila pastikan tiada sambungan serupa yang dipasang sebelum menetapkan kata laluan, kerana ini boleh menyebabkan pelayar tidak berfungsi dengan baik.</i>"
     }
 }
