--- a/_locales/no/messages.json
+++ b/_locales/no/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "Åpen Kildekode"
+    },
+    "notif_first": {
+        "message": "<i>Advarsel:<br>1. Denne utvidelsen vil kun være funksjonell etter at et passord er angitt. <br>2. Vennligst sørg for at ingen lignende utvidelser er installert før du angir passordet, da dette kan føre til at nettleseren ikke fungerer som den skal.</i>"
     }
 }
