--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "Kod Źródłowy"
+    },
+    "notif_first": {
+        "message": "<i>Ostrzeżenie:<br>1. To rozszerzenie będzie funkcjonalne tylko po ustawieniu hasła. <br>2. Proszę upewnić się, że przed ustawieniem hasła nie są zainstalowane podobne rozszerzenia, ponieważ może to spowodować awarię przeglądarki.</i>"
     }
 }
