--- a/_locales/sr/messages.json
+++ b/_locales/sr/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "Otvoreni Izvor"
+    },
+    "notif_first": {
+        "message": "<i>Упозорење:<br>1. Ово проширење ће бити функционално само након подешавања лозинке. <br>2. Молимо вас да се уверите да пре подешавања лозинке нису инсталирана слична проширења, јер то може довести до неуспеха прегледача.</i>"
     }
 }
