--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "Açık Kaynak"
+    },
+    "notif_first": {
+        "message": "<i>Uyarı:<br>1. Bu uzantı yalnızca bir şifre belirlendikten sonra çalışır. <br>2. Lütfen şifreyi belirlemeden önce benzer uzantıların kurulu olmadığından emin olun, çünkü bu tarayıcının yanlış çalışmasına neden olabilir.</i>"
     }
 }
