--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "Відкритий Код"
+    },
+    "notif_first": {
+        "message": "<i>Попередження:<br>1. Це розширення буде функціонувати лише після встановлення пароля. <br>2. Будь ласка, переконайтеся, що перед установкою пароля немає встановлених подібних розширень, оскільки це може призвести до збоїв у браузері.</i>"
     }
 }
