--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "开源"
+    },
+    "notif_first":{
+        "message":"<i>警告:<br>1. 此扩展仅在设置密码后才能正常工作。 <br>2. 请确保在设置密码之前没有安装任何类似的扩展，因为这可能导致浏览器出现故障。</i>"
     }
 }
