--- a/_locales/da/messages.json
+++ b/_locales/da/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "Åben Kilde"
+    },
+    "notif_first": {
+        "message": "<i>Advarsel:<br>1. Denne udvidelse vil kun være funktionel, efter at en adgangskode er indstillet. <br>2. Sørg for, at der ikke er installeret lignende udvidelser, før du indstiller adgangskoden, da det kan medføre, at browseren ikke fungerer korrekt.</i>"
     }
 }
