--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "Open Source"
+    },
+    "notif_first": {
+        "message": "<i>Warnung:<br>1. Diese Erweiterung ist nur funktionsfähig, nachdem ein Passwort festgelegt wurde. <br>2. Bitte stellen Sie sicher, dass vor der Festlegung des Passworts keine ähnlichen Erweiterungen installiert sind, da dies zu Fehlfunktionen des Browsers führen kann.</i>"
     }
 }
