--- a/_locales/el/messages.json
+++ b/_locales/el/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "Ανοιχτός Κώδικας"
+    },
+    "notif_first": {
+        "message": "<i>Προειδοποίηση:<br>1. Αυτό το πρόσθετο θα είναι λειτουργικό μόνο μετά την ρύθμιση ενός κωδικού πρόσβασης. <br>2. Παρακαλείστε να βεβαιωθείτε ότι δεν είναι εγκατεστημένα παρόμοια πρόσθετα πριν από τη ρύθμιση του κωδικού πρόσβασης, καθώς αυτό μπορεί να προκαλέσει δυσλειτουργία του προγράμματος περιήγησης.</i>"
     }
 }
