--- a/_locales/fa/messages.json
+++ b/_locales/fa/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "منبع باز"
+    },
+    "notif_first": {
+        "message": "<i>هشدار:<br>1. این افزونه فقط بعد از تنظیم رمز عبور کار خواهد کرد. <br>2. لطفاً قبل از تنظیم رمز عبور اطمینان حاصل کنید که هیچ افزونه مشابهی نصب نشده باشد، زیرا ممکن است باعث بروز مشکل در مرورگر شود.</i>"
     }
 }
