--- a/_locales/fil/messages.json
+++ b/_locales/fil/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "Bukas na Pinagmulan"
+    },
+    "notif_first": {
+        "message": "<i>Babala:<br>1. Ang pagpapalawak na ito ay magiging gumagana lamang pagkatapos itakda ang isang password. <br>2. Mangyaring tiyakin na walang katulad na mga extension na naka-install bago itakda ang password, dahil maaari itong magdulot ng malfunction ng browser.</i>"
     }
 }
