--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "Source Ouverte"
+    },
+    "notif_first": {
+        "message": "<i>Avertissement :<br>1. Cette extension ne sera fonctionnelle qu'après avoir défini un mot de passe. <br>2. Veuillez vous assurer qu'aucune extension similaire n'est installée avant de définir le mot de passe, car cela peut entraîner un dysfonctionnement du navigateur.</i>"
     }
 }
