--- a/_locales/gu/messages.json
+++ b/_locales/gu/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "ઓપન સોર્સ"
+    },
+    "notif_first": {
+        "message": "<i>ચેતવણી:<br>1. આ વિસ્તરણ માત્ર પાસવર્ડ સેટ કર્યા પછી કાર્યરત થશે. <br>2. કૃપા કરીને પાસવર્ડ સેટ કરવાના પહેલા કોઈ સમાન વિસ્તરણો ઇન્સ્ટોલ કરવામાં આવેલ નથી તે સુનિશ્ચિત કરો, કારણ કે તે બ્રાઉઝરની અમલવારીને ખોટું કરી શકે છે.</i>"
     }
 }
