--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "ओपन सॉर्स"
+    },
+    "notif_first": {
+        "message": "<i>चेतावनी:<br>1. यह एक्सटेंशन केवल पासवर्ड सेट करने के बाद ही कार्य करेगा। <br>2. कृपया पासवर्ड सेट करने से पहले सुनिश्चित करें कि कोई समान एक्सटेंशन स्थापित नहीं है, क्योंकि इससे ब्राउज़र में खराबी आ सकती है।</i>"
     }
 }
