--- a/_locales/hr/messages.json
+++ b/_locales/hr/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "Izvorni kod"
+    },
+    "notif_first": {
+        "message": "<i>Upozorenje:<br>1. Ova ekstenzija će biti funkcionalna samo nakon postavljanja lozinke. <br>2. Molimo vas da se uvjerite da prije postavljanja lozinke nisu instalirani slični dodaci, jer to može uzrokovati neispravnost preglednika.</i>"
     }
 }
