--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "Codice Sorgente"
+    },
+    "notif_first": {
+        "message": "<i>Avvertenza:<br>1. Questa estensione sarà funzionante solo dopo aver impostato una password. <br>2. Assicurati che non siano installate estensioni simili prima di impostare la password, poiché questo potrebbe causare malfunzionamenti del browser.</i>"
     }
 }
