--- a/_locales/kn/messages.json
+++ b/_locales/kn/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "ಮೂಲ ಕೋಡ್"
+    },
+    "notif_first": {
+        "message": "<i>ಅಗತ್ಯ ಜಾಗೃತಿ:<br>1. ಈ ವಿಸ್ತರಣೆ केवल ಪಾಸ್ವರ್ಡ್ ಹೊಂದಿಸಿದ ನಂತರವೇ ಕಾರ್ಯಗತಗೊಳ್ಳುತ್ತದೆ. <br>2. ದಯವಿಟ್ಟು ಪಾಸ್ವರ್ಡ್ ಹೊಂದಿಸುವ ಮೊದಲು ಯಾವುದೇ ಸಾಮಾನ್ಯ ವಿಸ್ತರಣೆಗಳನ್ನು ಇನ್‌ಸ್ಟಾಲ್ ಮಾಡಿಲ್ಲ ಎಂದು ಖಾತ್ರಿಯಾಗಿರಿ, ಏಕೆಂದರೆ ಇದು ಬ್ರೌಸರ್ ವೈಫಲ್ಯವನ್ನು ಉಂಟುಮಾಡಬಹುದು.</i>"
     }
 }
