--- a/_locales/lt/messages.json
+++ b/_locales/lt/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "Atidaryti Šaltinį"
+    },
+    "notif_first": {
+        "message": "<i>Įspėjimas:<br>1. Ši plėtinys veiks tik nustatant slaptažodį. <br>2. Prašome įsitikinti, kad prieš nustatydami slaptažodį nėra įdiegtų panašių plėtinių, nes tai gali sukelti naršyklės gedimus.</i>"
     }
 }
