--- a/_locales/pt_PT/messages.json
+++ b/_locales/pt_PT/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "Código Fonte"
+    },
+    "notif_first": {
+        "message": "<i>Aviso:<br>1. Esta extensão só funcionará após a definição de uma senha. <br>2. Certifique-se de que não existem extensões semelhantes instaladas antes de definir a senha, pois isso pode causar mau funcionamento do navegador.</i>"
     }
 }
