--- a/_locales/sw/messages.json
+++ b/_locales/sw/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "Chanzo Huria"
+    },
+    "notif_first": {
+        "message": "<i>Onyo:<br>1. Kupanzi hii itafanya kazi tu baada ya kuweka nenosiri. <br>2. Tafadhali hakikisha kuwa hakuna nyongeza zinazofanana zilizowekwa kabla ya kuweka nenosiri, kwani hii inaweza kusababisha kivinjari kutofanya kazi vizuri.</i>"
     }
 }
