--- a/_locales/ta/messages.json
+++ b/_locales/ta/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "ஓப்பன் சோமர்ஸ்"
+    },
+    "notif_first": {
+        "message": "<i>எச்சரிக்கை:<br>1. இந்த நீட்டிப்பு ஒரு கடவுச்சொல் அமைக்கப்பட்ட பிறகே செயல்படும். <br>2. கடவுச்சொல்லை அமைப்பதற்குக் குறைந்தது ஒரே மாதிரியான நீட்டிப்புகள் நிறுவப்படவில்லை என்பதை உறுதி செய்யவும், இது உலாவியில் தவறுகளை ஏற்படுத்தலாம்.</i>"
     }
 }
