--- a/_locales/te/messages.json
+++ b/_locales/te/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "ఓపెన్ సోర్స్"
+    },
+    "notif_first": {
+        "message": "<i>చెతవనికి:<br>1. ఈ పొడుగు పాస్వర్డ్ సెట్ చేసిన తరువాత మాత్రమే పనిచేస్తుంది. <br>2. పాస్వర్డ్ సెట్ చేసేటప్పుడు ఏ సమానమైన పొడుగులు ఇన్‌స్టాల్ కాలేదని నిర్ధారించుకోండి, ఇది బ్రౌజర్‌లో దెబ్బతింటుంది.</i>"
     }
 }
