--- a/_locales/th/messages.json
+++ b/_locales/th/messages.json
@@ -58,5 +58,8 @@
     },
     "link_source": {
         "message": "โอเพ่นซอร์ส"
+    },
+    "notif_first": {
+        "message": "<i>คำเตือน:<br>1. ส่วนขยายนี้จะทำงานได้ก็ต่อเมื่อมีการตั้งค่ารหัสผ่านแล้วเท่านั้น <br>2. โปรดตรวจสอบว่าไม่มีการติดตั้งส่วนขยายที่คล้ายกันก่อนที่จะตั้งค่ารหัสผ่าน เพราะอาจทำให้เบราว์เซอร์ทำงานผิดปกติได้</i>"
     }
 }
