feat(options): password show/hide toggle + full i18n coverage
- Add eye toggle buttons to show/hide passwords on Options page
- Robust click handling using closest('.toggle-visibility')
- Make eye buttons non-tabbable (tabindex=-1) per requirement
- Use shared icon img/eye.svg and style in css/unlock.css
- Add i18n keys: show_password, hide_password across all locales
- Fill missing translations (with EN fallback where needed)
- Fix unlock page password input styling regression (passwd>input rule)
- Keep ARIA: update title and aria-label dynamically per state

--- a/_locales/am/messages.json
+++ b/_locales/am/messages.json
@@ -61,5 +61,11 @@
     },
     "notif_first": {
         "message": "<i>እንደ ገና:<br>1. ይህ እባብ እንደ ወርዓት በይነት አድርጉ። <br>2. እባኮትን የአይነት ቀስት ምስል ስርዓት ከወንጌላው ይቀርበት፣ ምንም አይሆንም ይህ ይወጣው ይሞቃ ወይም ይሞቃ።</i>"
+    },
+    "show_password": {
+        "message": "የይለፍ ቃል አሳይ"
+    },
+    "hide_password": {
+        "message": "የይለፍ ቃል ደብቅ"
     }
 }
