--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -61,5 +61,11 @@
     },
     "notif_first": {
         "message": "<i>تحذير:<br>1. لن تعمل هذه الإضافة إلا بعد تعيين كلمة مرور. <br>2. يرجى التأكد من عدم تثبيت إضافات مشابهة قبل تعيين كلمة المرور، حيث قد يتسبب ذلك في عدم عمل المتصفح بشكل صحيح.</i>"
+    },
+    "show_password": {
+        "message": "إظهار كلمة المرور"
+    },
+    "hide_password": {
+        "message": "إخفاء كلمة المرور"
     }
 }
