--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -61,5 +61,11 @@
     },
     "notif_first": {
         "message": "<i>Предупреждение:<br>1. Това разширение ще бъде функционално само след задаване на парола. <br>2. Моля, уверете се, че преди задаването на паролата не са инсталирани подобни разширения, тъй като това може да доведе до неправилно функциониране на браузъра.</i>"
+    },
+    "show_password": {
+        "message": "Покажи паролата"
+    },
+    "hide_password": {
+        "message": "Скрий паролата"
     }
 }
