--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -61,5 +61,11 @@
     },
     "notif_first": {
         "message": "<i>Advertència:<br>1. Aquesta extensió només funcionarà després d'establir una contrasenya. <br>2. Assegureu-vos que no hi hagi extensions similars instal·lades abans d'establir la contrasenya, ja que això pot fer que el navegador no funcioni correctament.</i>"
+    },
+    "show_password": {
+        "message": "Mostra la contrasenya"
+    },
+    "hide_password": {
+        "message": "Amaga la contrasenya"
     }
 }
