--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -61,5 +61,11 @@
     },
     "notif_first": {
         "message": "<i>Upozornění:<br>1. Toto rozšíření bude funkční pouze po nastavení hesla. <br>2. Ujistěte se, že před nastavením hesla nejsou nainstalovány žádné podobné rozšíření, protože to může způsobit selhání prohlížeče.</i>"
+    },
+    "show_password": {
+        "message": "Zobrazit heslo"
+    },
+    "hide_password": {
+        "message": "Skrýt heslo"
     }
 }
