--- a/_locales/el/messages.json
+++ b/_locales/el/messages.json
@@ -61,5 +61,11 @@
     },
     "notif_first": {
         "message": "<i>Προειδοποίηση:<br>1. Αυτό το πρόσθετο θα είναι λειτουργικό μόνο μετά την ρύθμιση ενός κωδικού πρόσβασης. <br>2. Παρακαλείστε να βεβαιωθείτε ότι δεν είναι εγκατεστημένα παρόμοια πρόσθετα πριν από τη ρύθμιση του κωδικού πρόσβασης, καθώς αυτό μπορεί να προκαλέσει δυσλειτουργία του προγράμματος περιήγησης.</i>"
+    },
+    "show_password": {
+        "message": "Εμφάνιση κωδικού"
+    },
+    "hide_password": {
+        "message": "Απόκρυψη κωδικού"
     }
 }
