--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -60,6 +60,12 @@
         "message": "Código Fuente"
     },
     "notif_first": {
-        "message": "<i>Advertencia:<br>1. Esta extensión solo será funcional después de establecer una contraseña. <br>2. Asegúrese de que no haya extensiones similares instaladas antes de establecer la contraseña, ya que esto puede causar un mal funcionamiento del navegador.</i>"
+        "message": "<i>Advertencia:<br>1. Esta extensión solo funcionará después de establecer una contraseña. <br>2. Asegúrese de que no haya extensiones similares instaladas antes de establecer la contraseña, ya que esto puede causar un mal funcionamiento del navegador.</i>"
+    },
+    "show_password": {
+        "message": "Mostrar contraseña"
+    },
+    "hide_password": {
+        "message": "Ocultar contraseña"
     }
 }
