--- a/_locales/et/messages.json
+++ b/_locales/et/messages.json
@@ -61,5 +61,11 @@
     },
     "notif_first": {
         "message": "<i>Hoiatus:<br>1. See laiendus hakkab tööle alles pärast parooli seadmist. <br>2. Palun veenduge, et enne parooli seadmist ei oleks sarnaseid laiendusi installitud, kuna see võib põhjustada brauseri talitlushäireid.</i>"
+    },
+    "show_password": {
+        "message": "Kuva parool"
+    },
+    "hide_password": {
+        "message": "Peida parool"
     }
 }
