--- a/_locales/fa/messages.json
+++ b/_locales/fa/messages.json
@@ -61,5 +61,11 @@
     },
     "notif_first": {
         "message": "<i>هشدار:<br>1. این افزونه فقط بعد از تنظیم رمز عبور کار خواهد کرد. <br>2. لطفاً قبل از تنظیم رمز عبور اطمینان حاصل کنید که هیچ افزونه مشابهی نصب نشده باشد، زیرا ممکن است باعث بروز مشکل در مرورگر شود.</i>"
+    },
+    "show_password": {
+        "message": "نمایش گذرواژه"
+    },
+    "hide_password": {
+        "message": "پنهان کردن گذرواژه"
     }
 }
