--- a/_locales/he/messages.json
+++ b/_locales/he/messages.json
@@ -61,5 +61,11 @@
     },
     "notif_first": {
         "message": "<i>אזהרה:<br>1. הרחבה זו תהיה פעילה רק לאחר הגדרת סיסמה. <br>2. אנא ודאו שאין הרחבות דומות מותקנות לפני הגדרת הסיסמה, שכן זה עלול לגרום לתקלות בדפדפן.</i>"
+    },
+    "show_password": {
+        "message": "הצג סיסמה"
+    },
+    "hide_password": {
+        "message": "הסתר סיסמה"
     }
 }
