--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -61,5 +61,11 @@
     },
     "notif_first": {
         "message": "<i>Peringatan:<br>1. Ekstensi ini hanya akan berfungsi setelah kata sandi diatur. <br>2. Harap pastikan bahwa tidak ada ekstensi serupa yang terinstal sebelum mengatur kata sandi, karena ini dapat menyebabkan browser tidak berfungsi dengan baik.</i>"
+    },
+    "show_password": {
+        "message": "Tampilkan kata sandi"
+    },
+    "hide_password": {
+        "message": "Sembunyikan kata sandi"
     }
 }
