--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -61,5 +61,11 @@
     },
     "notif_first": {
         "message": "<i>警告:<br>1. この拡張機能は、パスワードを設定した後にのみ機能します。 <br>2. パスワードを設定する前に、類似の拡張機能がインストールされていないことを確認してください。これにより、ブラウザが正常に動作しなくなる可能性があります。</i>"
+    },
+    "show_password": {
+        "message": "パスワードを表示"
+    },
+    "hide_password": {
+        "message": "パスワードを非表示"
     }
 }
