--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -61,5 +61,11 @@
     },
     "notif_first": {
         "message": "<i>경고:<br>1. 이 확장 기능은 비밀번호를 설정한 후에만 작동합니다. <br>2. 비밀번호를 설정하기 전에 유사한 확장 기능이 설치되어 있지 않은지 확인하십시오. 이는 브라우저의 오작동을 유발할 수 있습니다.</i>"
+    },
+    "show_password": {
+        "message": "비밀번호 표시"
+    },
+    "hide_password": {
+        "message": "비밀번호 숨기기"
     }
 }
