--- a/_locales/ml/messages.json
+++ b/_locales/ml/messages.json
@@ -61,5 +61,11 @@
     },
     "notif_first": {
         "message": "<i>അറിയിപ്പ്:<br>1. ഈ വിപുലീകരണം ഒരു പാസ്വേഡ് സജ്ജമാക്കിയ ശേഷം മാത്രമേ പ്രവർത്തിക്കാൻ കഴിയും. <br>2. പാസ്വേഡ് സജ്ജമിക്കുന്നതിന് മുമ്പ് സമാനമായ വിപുലീകരണങ്ങൾ ഇൻസ്റ്റാൾ ചെയ്തിട്ടുണ്ടെന്ന് ഉറപ്പാക്കുക, കാരണം ഇത് ബ്രൗസർ പ്രവർത്തനത്തിലൊരുത്തരം വരുത്താൻ ഇടയാക്കാം.</i>"
+    },
+    "show_password": {
+        "message": "പാസ്‌വേഡ് കാണിക്കുക"
+    },
+    "hide_password": {
+        "message": "പാസ്‌വേഡ് മറയ്ക്കുക"
     }
 }
