--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -61,5 +61,11 @@
     },
     "notif_first": {
         "message": "<i>Предупреждение:<br>1. Это расширение будет работать только после установки пароля. <br>2. Пожалуйста, убедитесь, что перед установкой пароля не установлены аналогичные расширения, так как это может привести к сбоям в работе браузера.</i>"
+    },
+    "show_password": {
+        "message": "Показать пароль"
+    },
+    "hide_password": {
+        "message": "Скрыть пароль"
     }
 }
