--- a/_locales/sr/messages.json
+++ b/_locales/sr/messages.json
@@ -61,5 +61,11 @@
     },
     "notif_first": {
         "message": "<i>Упозорење:<br>1. Ово проширење ће бити функционално само након подешавања лозинке. <br>2. Молимо вас да се уверите да пре подешавања лозинке нису инсталирана слична проширења, јер то може довести до неуспеха прегледача.</i>"
+    },
+    "show_password": {
+        "message": "Прикажи лозинку"
+    },
+    "hide_password": {
+        "message": "Сакриј лозинку"
     }
 }
