--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -61,5 +61,11 @@
     },
     "notif_first": {
         "message": "<i>Varning:<br>1. Denna utvidgning kommer endast att fungera efter att ett lösenord har ställts in. <br>2. Se till att inga liknande tillägg är installerade innan du ställer in lösenordet, eftersom detta kan orsaka problem med webbläsaren.</i>"
+    },
+    "show_password": {
+        "message": "Visa lösenord"
+    },
+    "hide_password": {
+        "message": "Dölj lösenord"
     }
 }
