--- a/_locales/te/messages.json
+++ b/_locales/te/messages.json
@@ -61,5 +61,11 @@
     },
     "notif_first": {
         "message": "<i>చెతవనికి:<br>1. ఈ పొడుగు పాస్వర్డ్ సెట్ చేసిన తరువాత మాత్రమే పనిచేస్తుంది. <br>2. పాస్వర్డ్ సెట్ చేసేటప్పుడు ఏ సమానమైన పొడుగులు ఇన్‌స్టాల్ కాలేదని నిర్ధారించుకోండి, ఇది బ్రౌజర్‌లో దెబ్బతింటుంది.</i>"
+    },
+    "show_password": {
+        "message": "పాస్‌వర్డ్ చూపించు"
+    },
+    "hide_password": {
+        "message": "పాస్‌వర్డ్ దాచు"
     }
 }
