--- a/_locales/th/messages.json
+++ b/_locales/th/messages.json
@@ -61,5 +61,11 @@
     },
     "notif_first": {
         "message": "<i>คำเตือน:<br>1. ส่วนขยายนี้จะทำงานได้ก็ต่อเมื่อมีการตั้งค่ารหัสผ่านแล้วเท่านั้น <br>2. โปรดตรวจสอบว่าไม่มีการติดตั้งส่วนขยายที่คล้ายกันก่อนที่จะตั้งค่ารหัสผ่าน เพราะอาจทำให้เบราว์เซอร์ทำงานผิดปกติได้</i>"
+    },
+    "show_password": {
+        "message": "แสดงรหัสผ่าน"
+    },
+    "hide_password": {
+        "message": "ซ่อนรหัสผ่าน"
     }
 }
