--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -60,6 +60,12 @@
         "message": "Відкритий Код"
     },
     "notif_first": {
-        "message": "<i>Попередження:<br>1. Це розширення буде функціонувати лише після встановлення пароля. <br>2. Будь ласка, переконайтеся, що перед установкою пароля немає встановлених подібних розширень, оскільки це може призвести до збоїв у браузері.</i>"
+        "message": "<i>Попередження:<br>1. Це розширення буде працювати лише після встановлення пароля. <br>2. Переконайтеся, що перед встановленням пароля не встановлено подібних розширень, оскільки це може призвести до несправної роботи браузера.</i>"
+    },
+    "show_password": {
+        "message": "Показати пароль"
+    },
+    "hide_password": {
+        "message": "Приховати пароль"
     }
 }
