--- a/_locales/bn/messages.json
+++ b/_locales/bn/messages.json
@@ -60,6 +60,12 @@
         "message": "ওপেন সোর্স"
     },
     "notif_first": {
-        "message": "<i>Предупреждение:<br>1. Това разширение ще бъде функционално само след задаване на парола. <br>2. Моля, уверете се, че преди задаването на паролата не са инсталирани подобни разширения, тъй като това може да доведе до неправилно функциониране на браузъра.</i>"
+        "message": "<i>সতর্কতা:<br>1. এই এক্সটেনশন শুধুমাত্র পাসওয়ার্ড সেট করার পরে কাজ করবে। <br>2. পাসওয়ার্ড সেট করার আগে অনুগ্রহ করে নিশ্চিত করুন যে কোনও অনুরূপ এক্সটেনশন ইনস্টল করা নেই, কারণ এটি ব্রাউজার ত্রুটির কারণ হতে পারে।</i>"
+    },
+    "show_password": {
+        "message": "পাসওয়ার্ড দেখুন"
+    },
+    "hide_password": {
+        "message": "পাসওয়ার্ড লুকান"
     }
 }
