--- a/_locales/es_419/messages.json
+++ b/_locales/es_419/messages.json
@@ -61,5 +61,11 @@
     },
     "notif_first": {
         "message": "<i>Advertencia:<br>1. Esta extensión solo será funcional después de establecer una contraseña. <br>2. Asegúrate de que no haya extensiones similares instaladas antes de establecer la contraseña, ya que esto puede causar un mal funcionamiento del navegador.</i>"
+    },
+    "show_password": {
+        "message": "Mostrar contraseña"
+    },
+    "hide_password": {
+        "message": "Ocultar contraseña"
     }
 }
