--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -61,5 +61,11 @@
     },
     "notif_first": {
         "message": "<i>Figyelmeztetés:<br>1. Ez a bővítmény csak a jelszó beállítása után lesz működőképes. <br>2. Kérjük, győződjön meg arról, hogy a jelszó beállítása előtt nincsenek telepítve hasonló bővítmények, mivel ez a böngésző hibás működését okozhatja.</i>"
+    },
+    "show_password": {
+        "message": "Jelszó megjelenítése"
+    },
+    "hide_password": {
+        "message": "Jelszó elrejtése"
     }
 }
