--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -61,5 +61,11 @@
     },
     "notif_first": {
         "message": "<i>Aviso:<br>1. Esta extensão funcionará apenas após a definição de uma senha. <br>2. Certifique-se de que não existem extensões semelhantes instaladas antes de definir a senha, pois isso pode causar problemas no navegador.</i>"
+    },
+    "show_password": {
+        "message": "Mostrar senha"
+    },
+    "hide_password": {
+        "message": "Ocultar senha"
     }
 }
